set pro - paid version

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "com.biblegamesproject.didacticjesusgame",
+  "appId": "com.biblegamesproject.didacticjesusgame.pro",
   "appName": "Didactic Jesus Game",
   "webDir": "www",
   "bundledWebRuntime": false
